add/ loadFavoriteCats function in process...

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <br />
       <article>
         <img id="img1" alt="image" width="150" />
-        <button id="btn1" onclick="addFavoriteCat()">
+        <button id="btn1" onclick="saveFavoriteCats()">
           Save like favorite Cat
         </button>
       </article>
       <article>
         <img id="img2" alt="image" width="150" />
-        <button id="btn1" onclick="addFavoriteCat()">
+        <button id="btn2" onclick="saveFavoriteCats()">
           Save like favorite Cat
         </button>
       </article>
