--- a/index.html
+++ b/index.html
@@ -17,15 +17,11 @@
       <br />
       <article>
         <img id="img1" alt="image" width="150" />
-        <button id="btn1" onclick="saveFavoriteCats()">
-          Save like favorite Cat
-        </button>
+        <button id="btn1">Save like favorite Cat</button>
       </article>
       <article>
         <img id="img2" alt="image" width="150" />
-        <button id="btn2" onclick="saveFavoriteCats()">
-          Save like favorite Cat
-        </button>
+        <button id="btn2">Save like favorite Cat</button>
       </article>
     </section>
     <section id="favoritesCats">
