--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
         <button id="btn2">Save like favorite Cat</button>
       </article>
     </section>
-    <section id="favoritesCats">
-      <h2>Favorites Cats</h2>
-      <hr />
-      <article>
-        <img id="img3" alt="image" width="150" />
-        <button>Delete Cat</button>
-      </article>
-    </section>
+    <section id="favoritesCats"></section>
     <section id="uploadCats">
       <img id="img1" alt="image" width="150" />
     </section>
